@@ -1,7 +1,11 @@
 // Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.jetbrains.python.psi.types;
 
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Condition;
+import com.intellij.openapi.util.Couple;
+import com.intellij.openapi.util.Pair;
+import com.intellij.openapi.util.RecursionManager;
+import com.intellij.openapi.util.Ref;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.PsiNamedElement;
@@ -14,7 +18,21 @@ import com.jetbrains.python.ast.PyAstFunction;
 import com.jetbrains.python.codeInsight.dataflow.scope.ScopeUtil;
 import com.jetbrains.python.codeInsight.typing.PyProtocolsKt;
 import com.jetbrains.python.codeInsight.typing.PyTypingTypeProvider;
-import com.jetbrains.python.psi.*;
+import com.jetbrains.python.psi.AccessDirection;
+import com.jetbrains.python.psi.LanguageLevel;
+import com.jetbrains.python.psi.PyCallable;
+import com.jetbrains.python.psi.PyClass;
+import com.jetbrains.python.psi.PyExpression;
+import com.jetbrains.python.psi.PyFile;
+import com.jetbrains.python.psi.PyFunction;
+import com.jetbrains.python.psi.PyListLiteralExpression;
+import com.jetbrains.python.psi.PyParameter;
+import com.jetbrains.python.psi.PyQualifiedNameOwner;
+import com.jetbrains.python.psi.PySequenceExpression;
+import com.jetbrains.python.psi.PyTupleExpression;
+import com.jetbrains.python.psi.PyTypedElement;
+import com.jetbrains.python.psi.PyUtil;
+import com.jetbrains.python.psi.impl.ParamHelper;
 import com.jetbrains.python.psi.impl.PyBuiltinCache;
 import com.jetbrains.python.psi.impl.PyPsiUtils;
 import com.jetbrains.python.psi.impl.PyTypeProvider;
@@ -32,11 +50,27 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 
 import static com.jetbrains.python.PyNames.FUNCTION;
-import static com.jetbrains.python.psi.PyUtil.*;
-import static com.jetbrains.python.psi.impl.PyCallExpressionHelper.*;
+import static com.jetbrains.python.psi.PyUtil.as;
+import static com.jetbrains.python.psi.PyUtil.getReturnTypeToAnalyzeAsCallType;
+import static com.jetbrains.python.psi.PyUtil.isNewMethod;
+import static com.jetbrains.python.psi.impl.PyCallExpressionHelper.getArgumentsMappedToKeywordContainer;
+import static com.jetbrains.python.psi.impl.PyCallExpressionHelper.getArgumentsMappedToPositionalContainer;
+import static com.jetbrains.python.psi.impl.PyCallExpressionHelper.getMappedKeywordContainer;
+import static com.jetbrains.python.psi.impl.PyCallExpressionHelper.getMappedPositionalContainer;
+import static com.jetbrains.python.psi.impl.PyCallExpressionHelper.getRegularMappedParameters;
 
 public final class PyTypeChecker {
   private PyTypeChecker() {
@@ -186,6 +220,14 @@ public final class PyTypeChecker {
 
     if (expected instanceof PyUnsafeUnionType weakUnionType) {
       return Optional.of(match(weakUnionType, actual, context));
+    }
+
+    if (actual instanceof PyIntersectionType intersectionType) {
+      return Optional.of(match(expected, intersectionType, context));
+    }
+
+    if (expected instanceof PyIntersectionType intersectionType) {
+      return Optional.of(match(intersectionType, actual, context));
     }
 
     if (expected instanceof PyClassType && actual instanceof PyClassType) {
@@ -499,7 +541,7 @@ public final class PyTypeChecker {
                                @NotNull MatchContext context) {
     if (actual == null) return true;
     if (!(actual instanceof PyCallableParameterListType actualParameters)) return false;
-    return matchCallableParameters(expectedParameters.getParameters(), actualParameters.getParameters(), context);
+    return match(expectedParameters, actualParameters, context);
   }
 
   private static boolean match(@NotNull PyType expected, @NotNull PyUnionType actual, @NotNull MatchContext context) {
@@ -518,10 +560,6 @@ public final class PyTypeChecker {
       return ContainerUtil.or(actual.getMembers(), type -> match(expected, type, context).orElse(false));
     }
     return ContainerUtil.and(actual.getMembers(), type -> match(expected, type, context).orElse(false));
-  }
-
-  private static boolean match(@NotNull PyType expected, @NotNull PyUnsafeUnionType actual, @NotNull MatchContext context) {
-    return ContainerUtil.or(actual.getMembers(), type -> match(expected, type, context).orElse(false));
   }
 
   private static @NotNull Optional<Boolean> match(@NotNull PyTupleType expected,
@@ -544,6 +582,18 @@ public final class PyTypeChecker {
       return true;
     }
     return ContainerUtil.or(expected.getMembers(), type -> match(type, actual, context).orElse(true));
+  }
+
+  private static boolean match(@NotNull PyType expected, @NotNull PyIntersectionType actual, @NotNull MatchContext context) {
+    return ContainerUtil.or(actual.getMembers(), type -> match(expected, type, context).orElse(false));
+  }
+
+  private static boolean match(@NotNull PyIntersectionType expected, @NotNull PyType actual, @NotNull MatchContext context) {
+    return ContainerUtil.all(expected.getMembers(), type -> match(type, actual, context).orElse(true));
+  }
+
+  private static boolean match(@NotNull PyType expected, @NotNull PyUnsafeUnionType actual, @NotNull MatchContext context) {
+    return ContainerUtil.or(actual.getMembers(), type -> match(expected, type, context).orElse(false));
   }
 
   private static boolean match(@NotNull PyUnsafeUnionType expected, @NotNull PyType actual, @NotNull MatchContext context) {
@@ -612,17 +662,19 @@ public final class PyTypeChecker {
   }
 
   private static boolean matchProtocols(@NotNull PyClassType expected, @NotNull PyClassType actual, @NotNull MatchContext matchContext) {
-    GenericSubstitutions substitutions = collectTypeSubstitutions(actual, matchContext.context);
+    GenericSubstitutions expectedSubstitutions = collectTypeSubstitutions(expected, matchContext.context);
+    GenericSubstitutions actualSubstitutions = collectTypeSubstitutions(actual, matchContext.context);
 
 
     // See https://typing.python.org/en/latest/spec/generics.html#use-in-protocols
-    // > If a protocol uses Self in methods or attribute annotations, then a class Foo is assignable to the protocol 
+    // > If a protocol uses Self in methods or attribute annotations, then a class Foo is assignable to the protocol
     //   if its corresponding methods and attribute annotations use either Self or Foo or any of Foo’s subclasses.
     //
-    // It should be equivalent to replacing Self in the protocol with the Foo class we're matching it with. 
+    // It should be equivalent to replacing Self in the protocol with the Foo class we're matching it with.
     GenericSubstitutions protocolSubstitutions = new GenericSubstitutions();
     protocolSubstitutions.qualifierType = actual.toInstance();
-    MatchContext protocolContext = new MatchContext(matchContext.context, protocolSubstitutions, matchContext.reversedSubstitutions);
+    MatchContext protocolContext =
+      new MatchContext(matchContext.context, protocolSubstitutions, matchContext.reversedSubstitutions);
     for (kotlin.Pair<PyTypeMember, List<PyTypeMember>> pair : PyProtocolsKt.inspectProtocolSubclass(expected, actual,
                                                                                                     matchContext.context)) {
       final PyTypeMember protocolMember = pair.getFirst();
@@ -631,7 +683,10 @@ public final class PyTypeChecker {
         return false;
       }
 
-      final PyType protocolElementType = dropSelfIfNeeded(expected, pair.getFirst().getType(), matchContext.context);
+      final PyType rawProtocolElementType =
+        dropSelfIfNeeded(expected, protocolMember.getType(), matchContext.context);
+
+      final PyType protocolElementType = substitute(rawProtocolElementType, expectedSubstitutions, matchContext.context);
       final boolean elementResult = ContainerUtil.exists(subclassElementMembers, subclassElementMember -> {
         if (protocolMember.isWritable() && !subclassElementMember.isWritable()) {
           return false;
@@ -646,7 +701,8 @@ public final class PyTypeChecker {
         }
 
         PyType subclassElementType = dropSelfIfNeeded(actual, subclassElementMember.getType(), matchContext.context);
-        subclassElementType = substitute(subclassElementType, substitutions, matchContext.context);
+        subclassElementType = substitute(subclassElementType, actualSubstitutions, matchContext.context);
+
         return match(protocolElementType, subclassElementType, protocolContext).orElse(true);
       });
 
@@ -656,14 +712,15 @@ public final class PyTypeChecker {
     }
 
 
-    if (expected instanceof PyCollectionType) {
-      PyCollectionType genericSuperClass = findGenericDefinitionType(expected.getPyClass(), matchContext.context);
-      if (genericSuperClass != null) {
-        PyCollectionType concreteSuperClass =
-          (PyCollectionType)substitute(genericSuperClass, protocolContext.mySubstitutions, protocolContext.context);
-        assert concreteSuperClass != null;
-        return matchGenericClassesParameterWise((PyCollectionType)expected, concreteSuperClass, matchContext);
-      }
+    if (expected instanceof PyCollectionType genericExpected && hasGenerics(expected, matchContext.context)) {
+      PyCollectionType concreteExpected =
+        (PyCollectionType)substitute(expected, protocolContext.mySubstitutions, protocolContext.context);
+      assert concreteExpected != null;
+      // This match is supposed to succeed since all protocol members were compatible. 
+      // Effectively, we're just copying substitutions for the terminal type parameters e.g.
+      // extracting: T@func -> str 
+      // from: Iterable[T@func] <- Iterable[str]
+      return matchGenericClassesParameterWise(genericExpected, concreteExpected, matchContext);
     }
 
     return true;
@@ -710,9 +767,9 @@ public final class PyTypeChecker {
   private static @Nullable PyType dropSelfIfNeeded(@NotNull PyClassType classType,
                                                    @Nullable PyType elementType,
                                                    @NotNull TypeEvalContext context) {
-    if (elementType instanceof PyFunctionType functionType) {
-      if (PyUtil.isInitOrNewMethod(functionType.getCallable()) || !classType.isDefinition()) {
-        return functionType.dropSelf(context);
+    if (elementType instanceof PyCallableType callableType) {
+      if (PyUtil.isInitOrNewMethod(callableType.getCallable()) || !classType.isDefinition()) {
+        return callableType.dropSelf(context);
       }
     }
     return elementType;
@@ -815,36 +872,17 @@ public final class PyTypeChecker {
     return actualAttributes.containsAll(expected.getAttributeNames());
   }
 
-  private static boolean matchCallableParameters(@NotNull List<PyCallableParameter> expectedParameters,
-                                                 @NotNull List<PyCallableParameter> actualParameters,
-                                                 @NotNull MatchContext matchContext) {
+  private static boolean match(@NotNull PyCallableParameterListType expectedParametersType,
+                               @NotNull PyCallableParameterListType actualParametersType,
+                               @NotNull MatchContext matchContext) {
     TypeEvalContext context = matchContext.context;
-    if (expectedParameters.size() == 1) {
-      PyType onlyExpectedParamType = expectedParameters.get(0).getType(context);
-      if (onlyExpectedParamType instanceof PyParamSpecType expectedParamSpecType) {
-        if (actualParameters.size() == 1) {
-          PyType actualOnlyParamType = actualParameters.get(0).getType(context);
-          if (actualOnlyParamType instanceof PyParamSpecType || actualOnlyParamType instanceof PyConcatenateType) {
-            return match(expectedParamSpecType, actualOnlyParamType, matchContext);
-          }
-        }
-        return match(expectedParamSpecType, new PyCallableParameterListTypeImpl(actualParameters), matchContext);
-      }
-      else if (onlyExpectedParamType instanceof PyConcatenateType expectedConcatenateType) {
-        if (actualParameters.size() == 1) {
-          PyType actualOnlyParamType = actualParameters.get(0).getType(context);
-          if (actualOnlyParamType instanceof PyParamSpecType || actualOnlyParamType instanceof PyConcatenateType) {
-            return match(expectedConcatenateType, actualOnlyParamType, matchContext);
-          }
-        }
-        return match(expectedConcatenateType, new PyCallableParameterListTypeImpl(actualParameters), matchContext);
-      }
-    }
+    List<PyCallableParameter> expectedParameters = expectedParametersType.getParameters();
+    List<PyCallableParameter> actualParameters = actualParametersType.getParameters();
 
     int startIndex = 0;
     if (!expectedParameters.isEmpty() && !actualParameters.isEmpty()) {
-      var firstExpectedParam = expectedParameters.get(0);
-      var firstActualParam = actualParameters.get(0);
+      var firstExpectedParam = expectedParameters.getFirst();
+      var firstActualParam = actualParameters.getFirst();
       if (firstExpectedParam.isSelf() && firstActualParam.isSelf()) {
         if (!match(firstExpectedParam.getType(context), firstActualParam.getType(context), matchContext).orElse(true)) {
           return false;
@@ -853,36 +891,9 @@ public final class PyTypeChecker {
       }
     }
 
-    final var hasParamSpec = ContainerUtil.exists(expectedParameters, it -> (it.getType(context) instanceof PyParamSpecType));
-
-    // TODO Implement proper compatibility check for callable signatures, including positional- and keyword-only arguments, defaults, etc.
-    if (!hasParamSpec) {
-      boolean shouldAcceptUnlimitedPositionalArgs = ContainerUtil.exists(expectedParameters, PyCallableParameter::isPositionalContainer);
-      boolean canAcceptUnlimitedPositionalArgs = ContainerUtil.exists(actualParameters, PyCallableParameter::isPositionalContainer);
-      if (shouldAcceptUnlimitedPositionalArgs && !canAcceptUnlimitedPositionalArgs) return false;
-
-      boolean shouldAcceptArbitraryKeywordArgs = ContainerUtil.exists(expectedParameters, PyCallableParameter::isKeywordContainer);
-      boolean canAcceptArbitraryKeywordArgs = ContainerUtil.exists(actualParameters, PyCallableParameter::isKeywordContainer);
-      if (shouldAcceptArbitraryKeywordArgs && !canAcceptArbitraryKeywordArgs) return false;
-    }
-
-    List<PyType> expectedElementTypes = StreamEx.of(expectedParameters)
-      .filter(cp -> !(cp.getParameter() instanceof PySlashParameter || cp.getParameter() instanceof PySingleStarParameter))
-      .map(cp -> {
-        PyType argType = cp.getArgumentType(context);
-        if (cp.isPositionalContainer() && !(argType instanceof PyPositionalVariadicType)) {
-          return PyUnpackedTupleTypeImpl.createUnbound(argType);
-        }
-        return argType;
-      })
-      .toList();
-
-    // TODO: substitute the param spec
-    final var expectedElementTypes2 = ContainerUtil.filter(expectedElementTypes, it -> !(it instanceof PyParamSpecType));
-
-    PyTypeParameterMapping mapping = PyTypeParameterMapping.mapWithParameterList(ContainerUtil.subList(expectedElementTypes2, startIndex),
-                                                                                 ContainerUtil.subList(actualParameters, startIndex),
-                                                                                 context);
+    var mapping = PyCallableParameterMapping.mapCallableParameters(ContainerUtil.subList(expectedParameters, startIndex),
+                                                                   ContainerUtil.subList(actualParameters, startIndex),
+                                                                   context);
     if (mapping == null) {
       return false;
     }
@@ -915,10 +926,11 @@ public final class PyTypeChecker {
     }
 
     if (expected.isCallable() && actual.isCallable()) {
-      final List<PyCallableParameter> expectedParameters = expected.getParameters(context);
-      final List<PyCallableParameter> actualParameters = actual.getParameters(context);
-      if (expectedParameters != null && actualParameters != null) {
-        if (!matchCallableParameters(expectedParameters, actualParameters, matchContext)) {
+      final PyCallableParameterVariadicType expectedParametersType = expected.getParametersType(context);
+      final PyCallableParameterVariadicType actualParametersType = actual.getParametersType(context);
+
+      if (expectedParametersType != null && actualParametersType != null) {
+        if (!match(expectedParametersType, actualParametersType, matchContext).orElse(true)) {
           return Optional.of(false);
         }
       }
@@ -928,6 +940,17 @@ public final class PyTypeChecker {
       return Optional.of(true);
     }
     return Optional.empty();
+  }
+
+  private static @Nullable PyType getActualReturnType(@NotNull PyCallableType actual, @NotNull TypeEvalContext context) {
+    if (actual instanceof PyCallableTypeImpl) {
+      return actual.getReturnType(context);
+    }
+    PyCallable callable = actual.getCallable();
+    if (callable instanceof PyFunction) {
+      return getReturnTypeToAnalyzeAsCallType((PyFunction)callable, context);
+    }
+    return actual.getReturnType(context);
   }
 
   private static boolean match(@NotNull List<PyType> expected, @NotNull List<PyType> actual, @NotNull MatchContext matchContext) {
@@ -940,13 +963,6 @@ public final class PyTypeChecker {
 
   private static boolean isCallableProtocol(@NotNull PyClassLikeType expected, @NotNull TypeEvalContext context) {
     return PyProtocolsKt.isProtocol(expected, context) && expected.getMemberNames(false, context).contains(PyNames.CALL);
-  }
-
-  private static @Nullable PyType getActualReturnType(@NotNull PyCallableType actual, @NotNull TypeEvalContext context) {
-    if (actual instanceof PyFunctionType functionType && functionType.getCallable() instanceof PyFunction function) {
-      return getReturnTypeToAnalyzeAsCallType(function, context);
-    }
-    return actual.getReturnType(context);
   }
 
   private static @Nullable PyTupleType widenUnionOfTuplesToTupleOfUnions(@NotNull PyUnionType unionType, int elementCount) {
@@ -1156,6 +1172,9 @@ public final class PyTypeChecker {
     if (type instanceof PyUnsafeUnionType weakUnion) {
       return ContainerUtil.exists(weakUnion.getMembers(), member -> isUnknown(member, genericsAreUnknown, context));
     }
+    if (type instanceof PyIntersectionType intersectionType) {
+      return ContainerUtil.exists(intersectionType.getMembers(), member -> isUnknown(member, genericsAreUnknown, context));
+    }
     return false;
   }
 
@@ -1326,7 +1345,8 @@ public final class PyTypeChecker {
 
           PyTypeVarType sameScopeSubstitution = StreamEx.of(substitutions.typeVars.keySet())
             .findFirst(typeVarType2 -> {
-              return typeVarType2.getDeclarationElement() != null
+              return !typeVarType2.equals(typeVarSubstitution)
+                     && typeVarType2.getDeclarationElement() != null
                      && typeVarType2.getDeclarationElement().equals(typeVarSubstitution.getDeclarationElement());
             }).orElse(null);
 
@@ -1370,14 +1390,14 @@ public final class PyTypeChecker {
         if (qualifierType == null) {
           return selfType;
         }
-        // TODO change unification for calls on union types 
+        // TODO change unification for calls on union types
         // so that in the following
         //
         // class A:
         //     def a_method(self) -> Self:
         //         ...
         // x: A | B
-        // 
+        //
         // A.a_method # type: Callable[[A], A]
         // B wasn't considered as the receiver type in the first place, instead of filtering it out during substitution
         // (see PyTypingTest.testMatchSelfUnionType)
@@ -1420,46 +1440,49 @@ public final class PyTypeChecker {
 
       @Override
       public PyType visitPyCallableType(@NotNull PyCallableType callableType) {
-        @Nullable PyType parametersSubs;
-        List<PyCallableParameter> parameters = callableType.getParameters(context);
-        if (parameters != null) {
-          PyCallableParameter onlyParam = ContainerUtil.getOnlyItem(parameters);
-          if (onlyParam != null && onlyParam.getType(context) instanceof PyParamSpecType paramSpecType) {
-            parametersSubs = clone(paramSpecType);
-          }
-          else if (onlyParam != null && onlyParam.getType(context) instanceof PyConcatenateType concatenateType) {
-            parametersSubs = clone(concatenateType);
-          }
-          else {
-            parametersSubs = new PyCallableParameterListTypeImpl(
-              StreamEx.of(parameters)
-                .mapToEntry(param -> param.getType(context))
-                .flatMapKeyValue((param, paramType) -> {
-                  PyParameter paramPsi = param.getParameter();
-                  return StreamEx.of(Collections.singletonList(param.getType(context)))
-                    .flatCollection(t -> flattenUnpackedTuple(clone(t)))
-                    .map(paramSubType -> paramPsi != null ?
-                                         PyCallableParameterImpl.psi(paramPsi, paramSubType) :
-                                         PyCallableParameterImpl.nonPsi(param.getName(), paramSubType, param.getDefaultValue()));
-                })
-                .toList()
-            );
-          }
-        }
-        else {
-          parametersSubs = null;
-        }
+        PyCallableParameterVariadicType substitutedParams = clone(callableType.getParametersType(context));
         return new PyCallableTypeImpl(
-          parametersSubs instanceof PyCallableParameterListType parameterList ? parameterList.getParameters() :
-          parametersSubs instanceof PyConcatenateType concat ? List.of(PyCallableParameterImpl.nonPsi(concat)) :
-          parametersSubs instanceof PyParamSpecType paramSpec ? List.of(PyCallableParameterImpl.nonPsi(paramSpec)) :
-          null,
-          clone(callableType.getReturnType(context))
-          ,
+          substitutedParams,
+          clone(callableType.getReturnType(context)),
           callableType.getCallable(),
           callableType.getModifier(),
           callableType.getImplicitOffset()
         );
+      }
+
+      @Override
+      public PyType visitPyCallableParameterListType(@NotNull PyCallableParameterListType callableParameterListType) {
+        List<PyCallableParameter> parameters = callableParameterListType.getParameters();
+
+        boolean isSelfArgsKwargs = ParamHelper.isSelfArgsKwargsSignature(parameters);
+        boolean isArgsKwargs = ParamHelper.isArgsKwargsSignature(parameters);
+        // substitutes (*args: P.args, **kwargs: P.kwargs) with actual signature
+        if (isSelfArgsKwargs || isArgsKwargs) {
+          PyType kwargsType = parameters.getLast().getType(context);
+          PyCallableParameterVariadicType substituted = substitutions.getParamSpecs().get(kwargsType);
+
+          if (substituted instanceof PyCallableParameterListType listType) {
+            List<PyCallableParameter> newParams = listType.getParameters();
+            if (isSelfArgsKwargs) {
+              newParams = ContainerUtil.prepend(newParams, parameters.getFirst());
+            }
+            return new PyCallableParameterListTypeImpl(newParams);
+          }
+        }
+
+        List<PyCallableParameter> substitutedParams = StreamEx.of(parameters)
+          .mapToEntry(param -> param.getType(context))
+          .flatMapKeyValue((param, paramType) -> {
+            PyParameter paramPsi = param.getParameter();
+            return StreamEx.of(Collections.singletonList(param.getType(context)))
+              .flatCollection(t -> flattenUnpackedTuple(clone(t)))
+              .map(paramSubType -> paramPsi != null ?
+                                   PyCallableParameterImpl.psi(paramPsi, paramSubType) :
+                                   PyCallableParameterImpl.nonPsi(param.getName(), paramSubType, param.getDefaultValue()));
+          })
+          .toList();
+
+        return new PyCallableParameterListTypeImpl(substitutedParams);
       }
 
       @Override
